[package]
name = "rust-livekit-segfault-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
env_logger = "0.11.5"
futures = "0.3.30"
livekit = { version = "0.5.1", features = ["native-tls"] }
livekit-api = "0.4.0"
log = "0.4.22"
tokio = { version = "1", features = ["full"] }

